add new feature

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <h1>Weather App</h1>                                                                                                 
               <input type="text" id="locationInput" placeholder="Enter a Place Name">                                  
               <button id="submitBtn">Get Temp</button>                                                                      
-              <div id="weatherResult"></div>                                                                                       
+              <div id="weatherResult"></div> 
+              <p>This is Weather Detector</p>                                                                                      
           </div>                                                                                                                   
           <script src="TempDetect.js"></script>                                                                                    
       </body>                                                                                                                      
